--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Meina's Home Page</title>
     <link rel="stylesheet" href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.2/css/all.css"/>
     <link rel="stylesheet" href="css/my.css">
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
+    <script src="js/particles.min.js"></script>
 </head>
 <body>
 <layout>
@@ -77,5 +76,6 @@
         </a>
     </div>
 </layout>
+<script src="js/config.js"></script>
 </body>
 </html>
