--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <i class="fa-brands fa-gitlab" aria-hidden="true" title="Gitlab"></i>
         </a>
         <!--Gitlab Icon-->
+        <a target="_blank" href="https://drive.xzc-meina.top">
+            <i class="fa-solid fa-database" aria-hidden="true" title="WebDrive"></i>
+        </a>
+        <!--Storage Icon-->
         <a target="_blank" href="mailto:i@xzc-meina.top">
             <i class="fa-solid fa-envelope" aria-hidden="true" title="Mail"></i>
         </a>
