--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/particles.min.js"></script>
 </head>
 <body>
-<layout>
+<main>
     <div id="particles-js"></div>
     <div class="Name">
         Hi There,I'm Meina!
@@ -79,7 +79,7 @@
             <i class="fa-solid fa-user-group" aria-hidden="true" title="Sunset"></i>
         </a>
     </div>
-</layout>
+</main>
 <script src="js/config.js"></script>
 </body>
 </html>
