--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <a target="_blank" href="https://drive.xzc-meina.top">
             <i class="fa-solid fa-database" aria-hidden="true" title="WebDrive"></i>
         </a>
+        <!--GPG Key Icon-->
+        <a target="_blank" href="https://drive.xzc-meina.top/api/raw/?path=/GPG-Key/Mori_Meina.asc">
+            <i class="fa-solid fa-key" aria-hidden="true" title="PGP Public Key"></i>
+        </a>
         <!--Storage Icon-->
         <a target="_blank" href="mailto:i@xzc-meina.top">
             <i class="fa-solid fa-envelope" aria-hidden="true" title="Mail"></i>
